# Fintech_SP26

./: .gitignore  PIPELINE_README.md  README.md  earnings_pipeline.ipynb  earnings_pipeline.py  earnings_sentiment_returns.csv  pyproject.toml  requirements.txt  test_pipeline.py
raw_text/: README.txt
raw_text/AAPL/: AAPL_Q1_2025.txt  AAPL_Q1_2026.txt  AAPL_Q3_2025.txt  AAPL_Q4_2024.txt  AAPL_Q4_2025.txt
raw_text/AMZN/: AMZN_Q1_2024.txt  AMZN_Q2_2024.txt  AMZN_Q3_2025.txt  AMZN_Q4_2024.txt  AMZN_Q4_2025.txt
raw_text/GOOGL/: GOOGL_Q2_2025.txt  GOOGL_Q3_2025.txt  GOOGL_Q4_2024.txt  GOOGL_Q4_2025.txt
raw_text/META/: META_Q1_2026.txt  META_Q3_2024.txt  META_Q3_2025.txt  META_Q4_2024.txt  META_Q4_2025.txt
raw_text/MSFT/: MSFT_Q1_2025.txt  MSFT_Q1_2026.txt  MSFT_Q2_2025.txt  MSFT_Q2_2026.txt  MSFT_Q4_2025.txt
raw_text/NVDA/: NVDA_Q2_2025.txt  NVDA_Q3_2025.txt  NVDA_Q3_2026.txt  NVDA_Q4_2025.txt  NVDA_Q4_2026.txt
raw_text/TSLA/: TSLA_Q1_2024.txt  TSLA_Q2_2025.txt  TSLA_Q3_2024.txt  TSLA_Q3_2025.txt  TSLA_Q4_2024.txt  TSLA_Q4_2025.txt
src/audio_alpha/: __init__.py  aggregate_call_features.py  build_manifest.py  config.py  extract_features.py  preprocess_audio.py  run_pipeline.py  score_audio_sentiment.py  segment_audio.py
tests/audio_alpha/: test_aggregate_call_features.py  test_build_manifest.py  test_extract_features.py  test_preprocess_audio.py  test_score_audio_sentiment.py  test_segment_audio.py
